# ore-v2-sniper

./: .env.example  .gitignore  CLAUDE.md  CRITICAL_FINDINGS.md  Cargo.toml  DASHBOARD_INTEGRATION_COMPLETE.md  DATA_SOURCE_ANALYSIS.md  DEPLOY_FIX_COMPLETE.md  DEPLOY_INVESTIGATION_COMPLETE.md  EV_FIX_IMPACT.md  FRESH_START.md  JITO_REMOVAL_COMPLETE.md  LIVE_TRADING_DEPLOYED.md  ORE_SNIPER_GUIDE.md  ORE_V2_MECHANICS.md  PHASE_2_PROGRESS.md  PORTFOLIO_ANALYSIS.md  POST_CRASH_STATUS.md  POT_THRESHOLD_STRATEGY.md  PROJECT_SUMMARY.md  PROPORTIONAL_OWNERSHIP_IMPLEMENTATION.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  SHREDSTREAM_DECISION.md  SHREDSTREAM_FIX_COMPLETE.md  SPEED_OPTIMIZATION.md  STRATEGY_VERIFICATION.md  check_treasury.py  claw.md  codacy-results.json  monitor_paper_trading.sh  start_ore_bot.sh  start_ore_sniper.sh  test_deploy.sh  test_ev_correct.py  test_motherlode_impact.py  test_paper_trading.sh
archive/: test_ev_calculation.py  test_uneven_distribution.py
data/: events.json  status.json
docs/: README.md
docs/archive/: AUDIT_FINDINGS.md  CODE_REVIEW_FIXES.md  DATA_SOURCE_ANALYSIS.md  DEPLOY_FIX_COMPLETE.md  FIXES_APPLIED.md  FRIEND_STRATEGY_SUMMARY.md  GROK_POT_TRACKING_ADDED.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  JITO_PROTECTIONS.md  MOTHERLODE_FIX_COMPLETE.md  MULTI_CELL_COMPLETE.md  MULTI_CELL_IMPLEMENTATION.md  PAPER_TRADING_FIX_COMPLETE.md  PAPER_TRADING_READY.md  PAPER_TRADING_TEST_RESULTS.md  REFACTOR_SUMMARY.md  RPC_INTEGRATION_COMPLETE.md  SHREDSTREAM_FIX_NOV9.md  SHREDSTREAM_FIX_STRATEGY.md  SHREDSTREAM_GROK_ANALYSIS.md  SHREDSTREAM_INTEGRATION.md  SHREDSTREAM_ISSUE_SUMMARY.md  SHREDSTREAM_STATUS.md  STATUS.md  WEBSOCKET_ISSUE_SUMMARY.md
docs/current/: NEXT_STEPS.md
examples/: check_pdas.rs  check_tx_authority_pdas.rs  test_deploy_direct.rs  test_deploy_simple.rs  test_deploy_tx.rs  test_shredstream.rs
ore_shredstream_service/: Cargo.toml
ore_shredstream_service/src/: main.rs
src/: config.rs  dashboard.rs  jupiter_price.rs  lib.rs  main.rs  ore_board_sniper.rs  ore_board_websocket.rs  ore_instructions.rs  ore_jito.rs  ore_rpc.rs  ore_shredstream.rs
