[package]
name = "ore-shredstream-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ore-shredstream-service"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1.0"
futures = "0.3"

# Web server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Solana
solana-sdk = "2.1"
solana-entry = "2.1"
solana-stream-sdk = "0.5.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# Time
chrono = "0.4"
